[package]
name = "logme"
version = "0.1.0"
edition = "2021"
authors = ["Anish Badri anishadri2621@gmail.com"]
description = "A CLI tool for tracking developer wellness and productivity"
license = "MIT"
repository = "https://github.com/AnishxBadri/Logme"

[dependencies]
clap = "3.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.26.0", features = ["bundled"] }
ratatui = "0.28.1"
crossterm = "0.28.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
